Fix gap between header and footer items

--- a/flex/06-flex-layout/style.css
+++ b/flex/06-flex-layout/style.css
@@ -47,7 +47,7 @@ ul a {
 }
 
 .left-links, .right-links {
-  gap: 10px;
+  gap: 20px;
 }
 
 .header, .footer {
